--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,13 +2,44 @@
 # Description:
 # Project Tools configuration
 ########################################################################
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
+
+[tool.poetry]
+name = "mypackage"
+version = "0.1.0"
+description = "My package description"
+license = "MIT"
+authors = ["John Doe <john@doe.com>"]
+readme = "README.md"
+homepage = "https://github.com/tomoum/python"
+repository = "https://github.com/tomoum/python"
+documentation = "https://github.com/tomoum/python#readme"
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+]
+
+[tool.poetry.dependencies]
+python = ">=3.8.1,<4.0"
+pydantic = "^1.10.7"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.3.0"
+black = "^23.3.0"
+isort = "^5.12.0"
+pylint = "^2.17.2"
+pre-commit = "^3.2.2"
 
 [tool.pytest.ini_options]
-# unit test file pattern
 python_files = "test_*.py"
-# unit test function pattern
 python_functions = "test_*"
-# ignore these directories when collecting/discovering tests
 norecursedirs = []
 
 [tool.isort]
@@ -78,7 +109,6 @@ max-module-lines = 1000
 [tool.pylint.'LOGGING']
 logging-format-style = "new"
 logging-modules = "logging"
-
 
 [tool.pylint.'SIMILARITIES']
 ignore-comments = "yes"
